--- a/src/index.pug
+++ b/src/index.pug
@@ -8,17 +8,48 @@ html.h-100(lang='en')
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     )
+    link(rel="stylesheet" href="./assets/styles/main.css")
     script(
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     )
+    script(src="https://unpkg.com/axios/dist/axios.min.js")
+    script(src="./assets/javascript/main.js")
   body.d-flex.h-100.text-center
     div.cover-container.d-flex.w-100.h-100.p-3.mx-auto.flex-column
       header.mb-auto
       main.px-3
-        h1 Selene's 30th Birthday
+        h1.title Selene's 30th Birthday
         p.lead This is a test description where I can put more information.
         p.lead
-          a.btn.btn-lg.btn-secondary.fw-bold(type="button" href="#") RSVP
+          button.btn.btn-lg.btn-secondary.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#exampleModal") RSVP
       footer.mt-auto
+
+    div.modal.fade(id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true")
+      div.modal-dialog.modal-dialog-centered
+        div.modal-content
+          div.modal-header.border-bottom-0
+            h1.modal-title.fs-5(id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true") RSVP to Selene's 30th Birthday
+            button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
+          div.modal-body.text-start
+            form
+              div.mb-3
+                label.form-label(for="nameInput") Name
+                input.form-control(id="nameInput" type="text" name="name")
+              div.mb-3
+                label.form-label(for="phoneInput") Phone Number
+                input.form-control(id="phoneInput" type="tel" name="phone")
+              div.mb-3.row
+                div.col.text-end
+                  input.btn-check(type="radio" name="rsvp-selection" id="attendInput" autocomplete="off")
+                  label.btn.btn-outline-success(for="attendInput") Will Attend
+                div.col.text-start
+                  input.btn-check(type="radio" name="rsvp-selection" id="notAttendInput" autocomplete="off")
+                  label.btn.btn-outline-danger(for="notAttendInput") Will Not Attend
+          div.modal-footer.border-top-0.text-end
+            button.btn.btn-secondary(type="button" onclick="submitRSVP()") Submit
+
+
+
+dfFCwfmmWNe46eif
