--- a/src/index.pug
+++ b/src/index.pug
@@ -23,30 +23,38 @@ html.h-100(lang='en')
         h1.title Selene's 30th Birthday
         p.lead This is a test description where I can put more information.
         p.lead
-          button.btn.btn-lg.btn-secondary.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#exampleModal") RSVP
+          button.btn.btn-lg.btn-secondary.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#rsvpModal") RSVP
       footer.mt-auto
 
-    div.modal.fade(id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true")
+    div.modal.fade(id="rsvpModal" tabindex="-1" aria-labelledby="rsvpModalLabel" aria-hidden="true")
       div.modal-dialog.modal-dialog-centered
         div.modal-content
           div.modal-header.border-bottom-0
-            h1.modal-title.fs-5(id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true") RSVP to Selene's 30th Birthday
+            h1.modal-title.fs-5(id="rsvpModalLabel" tabindex="-1" aria-labelledby="rsvpModalLabel" aria-hidden="true") RSVP to Selene's 30th Birthday
             button.btn-close(type="button" data-bs-dismiss="modal" aria-label="Close")
           div.modal-body.text-start
-            form
-              div.mb-3
-                label.form-label(for="nameInput") Name
-                input.form-control(id="nameInput" type="text" name="name")
-              div.mb-3
-                label.form-label(for="phoneInput") Phone Number
-                input.form-control(id="phoneInput" type="tel" name="phone")
+            form.needs-validation
+              div.row
+                div.col.form-floating.mb-3
+                  input.form-control.needs-validation(id="firstNameInput" type="text" name="firstName" placeholder="First Name" required)
+                  label.ms-3(for="firstNameInput") First Name
+                  div.invalid-feedback Please provide your first name.
+                div.col.form-floating.mb-3
+                  input.form-control.needs-validation(id="lastNameInput" type="text" name="lastName" placeholder="Last Name" required)
+                  label.ms-3(for="lastNameInput") Last Name
+                  div.invalid-feedback Please provide your last name.
+              div.mb-3.form-floating
+                input.form-control.needs-validation(id="phoneInput" type="tel" name="phone" placeholder="Phone" required)
+                label(for="phoneInput") Phone Number
+                div.invalid-feedback Please provide a valid phone number.
               div.mb-3.row
                 div.col.text-end
-                  input.btn-check(type="radio" name="rsvp-selection" id="attendInput" autocomplete="off" value="true")
+                  input.btn-check.form-check(type="radio" name="rsvp-selection" id="attendInput" autocomplete="off" value="true" required)
                   label.btn.btn-outline-success(for="attendInput") Will Attend
                 div.col.text-start
-                  input.btn-check(type="radio" name="rsvp-selection" id="notAttendInput" autocomplete="off" value="false")
+                  input.btn-check.form-check(type="radio" name="rsvp-selection" id="notAttendInput" autocomplete="off" value="false" required)
                   label.btn.btn-outline-danger(for="notAttendInput") Will Not Attend
+                  div.invalid-feedback Please select one of the options.
           div.modal-footer.border-top-0.text-end
             button.btn.btn-secondary(type="button" onclick="submitRSVP()") Submit
 
