--- a/src/index.pug
+++ b/src/index.pug
@@ -19,11 +19,14 @@ html.h-100(lang='en')
   body.d-flex.h-100.text-center
     div.cover-container.d-flex.w-100.h-100.p-3.mx-auto.flex-column
       header.mb-auto
-      main.px-3
-        h1.title Selene's 30th Birthday
-        p.lead This is a test description where I can put more information.
-        p.lead
-          button.btn.btn-lg.btn-secondary.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#rsvpModal") RSVP
+      main.p-5.m-5
+        div.card.card-main.mx-auto.py-5
+          div.card-body
+            img.card-img-top.rounded-circle.mx-auto(src="./assets/images/selene.png")
+            h1.title.mt-5 Selene's 30th Birthday
+            p.lead This is a test description where I can put more information.
+            p.lead
+              button.btn.btn-lg.btn-pink.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#rsvpModal") RSVP
       footer.mt-auto
 
     div.modal.fade(id="rsvpModal" tabindex="-1" aria-labelledby="rsvpModalLabel" aria-hidden="true")
