--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,10 +1,17 @@
+@font-face {
+    font-family: barbieFont;
+    src: url("../fonts/barbie.ttf");
+}
+
 body {
-    background-color: #e0218a;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='50' height='50' viewBox='0 0 90 90'%3E%3Ccircle fill-opacity='0.85' fill='%23E0218A' cx='45' cy='45' r='5'/%3E%3Cg fill='%23E0218A' fill-opacity='0.85'%3E%3Ccircle cx='0' cy='90' r='5'/%3E%3Ccircle cx='90' cy='90' r='5'/%3E%3Ccircle cx='90' cy='0' r='5'/%3E%3Ccircle cx='0' cy='0' r='5'/%3E%3C/g%3E%3C/svg%3E");
+    font-family: barbieFont;
 }
 .card-main {
     max-width: 800px;
     box-shadow: 0 5px 10px rgb(0 0 0 / 0.5);
-    color: #e0218a;
+    color: #ffffff;
+    background-color: #e0218a;
 }
 .card-img-top {
     position: absolute;
@@ -17,12 +24,69 @@ body {
 }
 
 .btn.btn-pink {
-    color: #e0218a;
+    color: white;
     background: transparent;
-    border-color: #e0218a;
+    border-color: white;
+    border-width: 2px;
 }
 
 .btn.btn-pink:hover {
+    color: #e0218a;
+    background-color: white;
+}
+
+.btn-check:checked+.btn {
+    color: #e0218a;
+    border-color: white;
+    background-color: white;
+}
+
+.modal-pink {
     color: white;
     background-color: #e0218a;
+    border-color: #e0218a;
+}
+
+.input-pink {
+    color: #e0218a;
+    border-color: white;
+}
+
+.input-pink:focus {
+    border-color: white;
+    color: #e0218a;
+    box-shadow: None;
+}
+
+.was-validated .form-control:invalid {
+    border-color: white;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23e0218a'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+}
+
+.was-validated .form-control:invalid:focus {
+    border-color: white;
+    box-shadow: None;
+}
+
+.was-validated .form-control:valid {
+    border-color: white;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23ee88c0' d='M2.3 6.73.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
+}
+
+.was-validated .form-control:valid:focus {
+    border-color: white;
+    box-shadow: None;
+}
+
+.label-pink {
+    color: #e0218a;
+}
+
+.feedback-white {
+    color: white;
+}
+
+.toast-pink {
+    background-color: #e0218a !important;
+    color: white;
 }
