Mobile scaling by setting viewport

--- a/src/index.pug
+++ b/src/index.pug
@@ -2,6 +2,7 @@ doctype html
 html.h-100(lang='en')
   head
     title Selene's 30th Birthday
+    meta(name-="viewport" content="width=device-width, initial-scale=1")
     link(
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,7 +31,7 @@ html.h-100(lang='en')
       footer.mt-auto
 
     div.modal.fade(id="rsvpModal" tabindex="-1" aria-labelledby="rsvpModalLabel" aria-hidden="true")
-      div.modal-dialog.modal-dialog-centered
+      div.modal-dialog.modal-dialog-centered.modal-lg
         div.modal-content.modal-pink
           div.modal-header.border-bottom-0
             h1.modal-title.fs-5(id="rsvpModalLabel" tabindex="-1" aria-labelledby="rsvpModalLabel" aria-hidden="true") RSVP to Selene's 30th Birthday
