--- a/src/index.pug
+++ b/src/index.pug
@@ -2,7 +2,7 @@ doctype html
 html.h-100(lang='en')
   head
     title Selene's 30th Birthday
-    meta(name-="viewport" content="width=device-width, initial-scale=1")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
     link(
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +20,7 @@ html.h-100(lang='en')
   body.d-flex.h-100.text-center
     div.cover-container.d-flex.w-100.h-100.p-3.mx-auto.flex-column
       header.mb-auto
-      main.p-5.m-5
+      main
         div.card.card-main.mx-auto.py-5
           div.card-body
             img.card-img-top.rounded-circle.mx-auto(src="./assets/images/selene.png")
