Added loading spinner to submission

--- a/src/index.pug
+++ b/src/index.pug
@@ -63,7 +63,7 @@ html.h-100(lang='en')
                   label.btn.btn-pink(for="notAttendInput") Will Not Attend
                   div.invalid-feedback.feedback-white Please select one of the options.
           div.modal-footer.border-top-0.text-end
-            button.btn.btn-pink(type="button" onclick="submitRSVP()") Submit
+            button.btn.btn-pink(id="submitButton" type="button" onclick="submitRSVP()") Submit
 
     div.toast-container.position-fixed.top-0.end-0.p-3
       div.toast.align-items-center.border-0.toast-pink(role="alert" id="toast" aria-live="assertive" aria-atomic="true")
