--- a/src/index.pug
+++ b/src/index.pug
@@ -26,7 +26,7 @@ html.h-100(lang='en')
             img.card-img-top.rounded-circle.mx-auto(src="./assets/images/selene.png")
             h1.title.mt-5 Selene's 30th Birthday
             h5 [ SURPRISE, DON'T TELL SELENE! ]
-            p Selene is turning 30! She's knows we'll be having a party but the surprise is I'm going to throw her a private rave! (DJ, bartender, theme, everything)
+            p Selene is turning 30! She knows we'll be having a party but the surprise is I'm going to throw her a private rave! (DJ, bartender, theme, everything)
             p Please RSVP as soon as possible so I can start getting everything locked down.
             p The theme will be Barbie! Think bright colors and Margot Robbie/Ryan Gosling in the new Barbie Movie. I'm going to subsidize the party but hoping everyone can throw in a little bit to help out. (I'll send out a message about this later)
             p.lead
