--- a/src/index.pug
+++ b/src/index.pug
@@ -25,6 +25,7 @@ html.h-100(lang='en')
           div.card-body
             img.card-img-top.rounded-circle.mx-auto(src="./assets/images/selene.png")
             h1.title.mt-5 Selene's 30th Birthday
+            h5 January 28th, 2023
             h5 [ SURPRISE, DON'T TELL SELENE! ]
             p Selene is turning 30! She knows we'll be having a party but the surprise is I'm going to throw her a private rave! (DJ, bartender, theme, everything)
             p Please RSVP as soon as possible so I can start getting everything locked down.
