--- a/src/index.pug
+++ b/src/index.pug
@@ -9,12 +9,14 @@ html.h-100(lang='en')
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     )
+    //- link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer")
     link(rel="stylesheet" href="./assets/styles/main.css")
     script(
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     )
+    script(src="https://kit.fontawesome.com/83100d2143.js" crossorigin="anonymous")
     script(src="https://unpkg.com/axios/dist/axios.min.js")
     script(src="./assets/javascript/main.js")
   body.d-flex.h-100.text-center
@@ -25,11 +27,22 @@ html.h-100(lang='en')
           div.card-body
             img.card-img-top.rounded-circle.mx-auto(src="./assets/images/selene.png")
             h1.title.mt-5 Selene's 30th Birthday
-            h5 January 28th, 2023
-            h5 [ SURPRISE, DON'T TELL SELENE! ]
-            p Selene is turning 30! She knows we'll be having a party but the surprise is I'm going to throw her a private rave! (DJ, bartender, theme, everything)
-            p Please RSVP as soon as possible so I can start getting everything locked down.
-            p The theme will be Barbie! Think bright colors and Margot Robbie/Ryan Gosling in the new Barbie Movie. I'm going to subsidize the party but hoping everyone can throw in a little bit to help out. (I'll send out a message about this later)
+            h5
+              i.fa-regular.fa-calendar
+              | &nbsp; January 28th, 2023
+            br
+            h5
+              i.fa-solid.fa-circle-exclamation
+              | &nbsp; SURPRISE, DON'T TELL SELENE!
+            p.text-start.mx-3
+              i.fa-solid.fa-cake-candles
+              | &nbsp; Selene is turning 30! She knows we'll be having a party but the surprise is I'm going to throw her a private rave! (DJ, bartender, theme, everything)
+            p.text-start.mx-3
+              i.fa-solid.fa-circle-check
+              | &nbsp; Please RSVP as soon as possible so I can start getting everything locked down.
+            p.text-start.mx-3
+              i.fa-solid.fa-mask
+              | &nbsp; The theme will be Barbie! Think bright colors and Margot Robbie/Ryan Gosling in the new Barbie Movie. I'm going to subsidize the party but hoping everyone can throw in a little bit to help out. (I'll send out a message about this later)
             p.lead
               button.btn.btn-lg.btn-pink.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#rsvpModal") RSVP
       footer.mt-auto
