--- a/src/index.pug
+++ b/src/index.pug
@@ -29,20 +29,39 @@ html.h-100(lang='en')
             h1.title.mt-5 Selene's 30th Birthday
             h5
               i.fa-regular.fa-calendar
-              | &nbsp; January 28th, 2023
+              | &nbsp January 28th, 2023 <br>
+            p
+              i.fa-solid.fa-clock
+              | &nbsp 8:00 PM - 12:00 AM
             br
             h5
               i.fa-solid.fa-circle-exclamation
-              | &nbsp; SURPRISE, DON'T TELL SELENE!
+              | &nbsp SURPRISE! DON'T TELL SELENE!
+            br
             p.text-start.mx-3
               i.fa-solid.fa-cake-candles
-              | &nbsp; Selene is turning 30! She knows we'll be having a party but the surprise is I'm going to throw her a private rave! (DJ, bartender, theme, everything)
+              | &nbsp; Selene is turning 30! Let's throw her a private rave!
             p.text-start.mx-3
-              i.fa-solid.fa-circle-check
-              | &nbsp; Please RSVP as soon as possible so I can start getting everything locked down.
+              i.fa-solid.fa-location-dot
+              | &nbsp <a class="link-no-styling" href="https://wrightroom.co/" target="_blank">The Wright Room</a> <br>
+              | 535 16th St Mall #240, Denver, CO 80202
+            p.text-start.mx-3
+              i.fa-solid.fa-car
+              | &nbsp If you're planning to drive, <a class="link-no-styling" href="https://denverpavilions.com/parking/" target="_blank">Pavillions Parking</a> is an underground garage next to the venue. $7 to park until 5:00 AM.
+            p.text-start.mx-3.container-music-player
+              i.fa-solid.fa-headphones
+              | &nbsp DJ Andy Cooper
+              //- div.container-music-player
+              iframe.music-player(src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&feed=%2Fdjandycoops%2Fedm-march21%2F" frameborder="0")
             p.text-start.mx-3
               i.fa-solid.fa-mask
-              | &nbsp; The theme will be Barbie! Think bright colors and Margot Robbie/Ryan Gosling in the new Barbie Movie. I'm going to subsidize the party but hoping everyone can throw in a little bit to help out. (I'll send out a message about this later)
+              | &nbsp The theme will be Barbie! Think bright colors and Margot Robbie/Ryan Gosling in the new Barbie Movie.
+            p.text-start.mx-3
+              i.fa-solid.fa-money-bill
+              | &nbsp Asking everyone to contribute $30 towards the party. This will include appetizers and your first round! If you're coming from out of town or unable to contribute, no worries. Your presence is more important!
+            p.text-start.mx-3
+              i.fa-solid.fa-circle-check
+              | &nbsp Please RSVP as soon as possible!
             p.lead
               button.btn.btn-lg.btn-pink.fw-bold(type="button" data-bs-toggle="modal" data-bs-target="#rsvpModal") RSVP
       footer.mt-auto
