Added new deeplink for Venmo

--- a/src/index.pug
+++ b/src/index.pug
@@ -58,7 +58,7 @@ html.h-100(lang='en')
             p.text-start.mx-3
               i.fa-solid.fa-money-bill
               | &nbsp Asking everyone to contribute $30 towards the party. This will include appetizers and your first round! If you're coming from out of town or unable to contribute, no worries. Your presence is more important!
-              | Please venmo me: <a class="link-no-styling" href="https://account.venmo.com/u/Nick-Brunner" target="_blank">@Nick-Brunner</a>
+              | Please venmo me: <a class="link-no-styling" href="https://urlgeni.us/venmo/Nick-Brunner" target="_blank">@Nick-Brunner</a>
             p.text-start.mx-3
               i.fa-solid.fa-circle-check
               | &nbsp Please RSVP as soon as possible!
